--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "http://lg.io" # the base hostname & protocol for your site
 twitter_username: lg
 github_username: lg
 highlighter: pygments
+timezone: America/Los_Angeles
 
 # Build settings
 markdown: kramdown
