added letsencrypt article

--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,14 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://lg.io" # the base hostname & protocol for your site
 twitter_username: lg
 github_username: lg
-highlighter: pygments
+highlighter: coderay
 timezone: America/Los_Angeles
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
 
 gems:
   - jekyll-gist
-  - pygments
+  - coderay
