--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ twitter_username: lg
 github_username: lg
 highlighter: rouge
 timezone: America/Los_Angeles
+future: true
 
 # Build settings
 markdown: kramdown
