updated to the latest github jekyll recommendations

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,12 @@
 title: Larry Land
 email: trivex@gmail.com
 description: Larry Gadea's random ramblings
+twitter:
+  username: lg
+social:
+  name: Larry Gadea
+  links:
+    - https://twitter.com/lg
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://lg.io" # the base hostname & protocol for your site
 twitter_username: lg
@@ -17,3 +23,5 @@ kramdown:
 
 gems:
   - jekyll-gist
+  - jekyll-seo-tag
+  - jekyll-sitemap
